--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Nancycy's Learning Journey
-SEOTitle: Nancycy's Blog | Nancycy' Learning Journey
+SEOTitle: Nancycy's Blog
 header-img: img/home-bg.jpg
 email: lanzhao944@gmail.com
 description: "这里是 @nancycyzl 的个人博客，记录我的学习旅程 | Good good study Day day up"
@@ -59,7 +59,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+disqus_username:
 
 # Netease settings
 netease_comment: false
@@ -74,8 +74,8 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "学海无涯，记录我的学习历程"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "每天进步一点点"
+sidebar-avatar: img/fighting.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
