--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ netease_comment: false
 #ga_domain: huangxuan.me
 
 # Sidebar settings
-sidebar: true # whether or not using Sidebar.
+sidebar: false # whether or not using Sidebar.
 sidebar-about-description: "每天进步一点点"
-sidebar-avatar: https://github.com/nancycyzl/nancycyzl.github.io/blob/main/img/fighting.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/fighting.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
