--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ netease_comment: false
 #ga_domain: huangxuan.me
 
 # Sidebar settings
-sidebar: false # whether or not using Sidebar.
+sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "每天进步一点点"
 sidebar-avatar: img/fighting.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
